# transfer-learning

./: README.md  pyproject.toml
models/: Afghanistan-Rice-best-model.h5  Argentina-Rice-best-model.h5  Argentina-Ukraine-Rice-transfer-learning.h5  Bangladesh-Afghanistan-Rice.h5  Bangladesh-Argentina-Rice-new-layers.h5  Bangladesh-Kyrgyzstan-Rice.h5  Bangladesh-Lao-Rice.h5  Bangladesh-Nigeria-Rice-new-layers.h5  Bangladesh-Palestine-Rice.h5  Bangladesh-Rice-best-model.h5  Bangladesh-Rice-final-model.h5  Bangladesh-SriLanka-Rice.h5  Bangladesh-Ukraine-Rice-new-layers.h5  Bangladesh-Ukraine-Rice-small-rate.h5  Bangladesh-Ukraine-Rice-transfer-learning.h5  India-Afghanistan-Rice.h5  India-Argentina-Rice-new-layers.h5  India-Kyrgyzstan-Rice.h5  India-Lao-Rice.h5  India-Palestine-Rice.h5  India-Rice-best-model.h5  India-Rice-final-model.h5  India-SriLanka-Rice.h5  India-Ukraine-Rice-new-layers.h5  India-Ukraine-Rice-small-rate.h5  India-Ukraine-Rice-transfer-learning.h5  Indonesia-Afghanistan-Rice.h5  Indonesia-Argentina-Rice-new-layers.h5  Indonesia-Kyrgyzstan-Rice.h5  Indonesia-Lao-Rice.h5  Indonesia-Nigeria-Rice-new-layers.h5  Indonesia-Palestine-Rice.h5  Indonesia-Rice-best-model.h5  Indonesia-Rice-final-model.h5  Indonesia-SriLanka-Rice.h5  Indonesia-Ukraine-Rice-new-layers.h5  Indonesia-Ukraine-Rice-small-rate.h5  Indonesia-Ukraine-Rice-transfer-learning.h5  Kyrgyzstan-Rice-best-model.h5  Lao-Rice-best-model.h5  (+45 more)
reports/: large-models.json  market-models.json  small-models.json  tl-market-models.json  tl-models.json
scalers/: Afghanistan-Rice-StandardScaler.pkl  (+18 more)
(+48 files in other folders)
