[tool.poetry]
name = "transfer-learning"
version = "0.1.0"
description = ""
authors = ["Jana Janković <jana.jankovic@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.15.0"
tensorflow-intel = {version="^2.15.0", platform = "win32"}
scikit-learn = "1.2.2"
flask = "^3.0.2"
requests = "^2.31.0"
pandas = "2.0.3"
matplotlib = "^3.4.3"
numpy = "^1.22,<1.24"
flask-cors = "^4.0.0"
mlflow = "2.11.3"
pytest-rerunfailures = "^14.0"
scikit-optimize = "^0.10.2"
optuna = "^4.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
black = "^24.3.0"
jupyter = "^1.0.0"
pytest = "^8.1.1"